[package]
name = "speedrust"
version = "0.1.0"
edition = "2021"

description = "Fast, lightweight internet speed test CLI in Rust – optimized for Jio 5G & Indian users"
license = "MIT"
repository = "https://github.com/pratikdevelop/speedrust"
keywords = ["speedtest", "cli", "internet", "speed", "rust", "jio", "5g"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
rand = "0.9"
indicatif = "0.17"
colored = "3.0"